[feat] getting producst in menu fragment with their images